feat: cosmetics